objects/Account_Notes_Temporary__c.object
<CustomObject>
    <description>This object is created to load the Notes data which is linked to Account from MS SQL to Salesforce. After we load the data into this object, we will create a note into the ContentNote object and will link to the account using the ContentDocumentLink object</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <description>This field is used to capture the 18 digit Salesforce Account Id from MS SQL</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AccountId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsInserted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check whether the record is successfully inserted into the ContentNote object or not</description>
        <label>IsInserted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_Description__c</fullName>
        <description>This field is used to load the description of the Account notes from MS SQL</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes Description</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_MSD_Record_ID__c</fullName>
        <description>Added to capture MSD record ID</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MSD Record ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Account Notes Temporary</label>
    <nameField>
        <displayFormat>AccountNote-{0000000000}</displayFormat>
        <label>Account Notes Temporary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Notes Temporarys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>